ok got react and jquery to play nicely with require

--- a/app/index.html
+++ b/app/index.html
@@ -20,17 +20,20 @@
         <![endif]-->
 
 
-        <div class="hero-unit">
+        <div class="row">
           <h1>'Allo, 'Allo!</h1>
           <p>You now have</p>
           <ul>
             <li>HTML5 Boilerplate</li>
             <li>jQuery</li>
+            <li>Zurb Foundation 5</li>
             <li>Backbone.js</li>
             <li>Underscore.js</li>
             <li>Modernizr</li>
             <li>RequireJS</li>
+            <li>React</li>
           </ul>
+          <div id="comment-box"></div>
         </div>
 
 
