--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
             <li>RequireJS</li>
             <li>React</li>
           </ul>
-          <div id="comment-box"></div>
+          <div id="comment-box" class="panel"></div>
         </div>
 
 
